--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,24 +1,31 @@
 body, html, #root {
+  color: rgb(201, 195, 195);
+  background-color: #1A1411;
   height: 100%;
   margin: 0;
   padding: 0;
+  
 }
 
-.parenthead {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  border: 2px dashed red; /* For debugging */
+
+
+.heading h2{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  font-size: 110px;
+  font-weight: bold;
+  font-family: "Stoke", serif;
+
 }
 
-.heading {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.lister{
+  margin: 50px  50px ;
+  font-size: 20px;
 }
 
-.heading h2, .heading ul {
-  margin: 0;
-  padding: 0;
+.lister2{
+  margin: 10px 0;
+  padding: 10px;
+  border-bottom: 0.5px solid #ccc;
 }
